local storage is fixed.

--- a/assets/style.css
+++ b/assets/style.css
@@ -41,3 +41,8 @@ a:hover {
     border: 2px solid gray;
     width: 100%;
 }
+
+.resultDiv {
+    display: flex;
+    justify-content: space-evenly;
+}
